# ptpsim

./: .gitignore  Cargo.toml  plot_experiments.sh  plot_experiments2.py  ptp4l_graph.py  requirements.txt  run_experiment.py  topology.toml
experiments/: __init__.py  asymmetric_delay.py  symmetric_delay.py
experiments/lib/: __init__.py  ptpsim.py  utils.py
plans/: asymmetric_link.yaml  symmetric_link.yaml
sim-patches/: v1-0001-ptp_mock-Expose-ptp_clock_info.patch  v1-0002-net-netdevsim-Enable-mock-hardware-timestamping.patch  v1-0003-netdevsim-Share-PHC-across-ports-of-netdevsim.patch
src/: api.rs  main.rs  netdevsim.rs  netns.rs  node.rs  sim_logger.rs  simulation.rs  topology.rs
topologies/: two_nodes.toml
