[package]
name = "ptpsim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["completion"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_bw = "2.5.4"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
